# c-to-ocaml

./: .gitignore  README.md  dune-project  tocaml.opam
_build/: .db  .digest-db  log
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/ecf090c8fb7f28d4b9cf50ba9610db04/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/src/: dune  lib.cma  lib.cmxa  lib.cmxs  lib.ml  lib.mli  lib.pp.ml  lib.pp.mli
_build/default/src/.lib.objs/byte/: lib.cmi  lib.cmo  lib.cmt  lib.cmti
_build/default/src/.lib.objs/native/: lib.cmx
_build/default/src/.merlin-conf/: exe-ngrams  lib-lib
_build/default/src/.ngrams.eobjs/byte/: dune__exe__Ngrams.cmi  dune__exe__Ngrams.cmti
_build/default/src/.ngrams.eobjs/native/: dune__exe__Ngrams.cmx
_build/default/tests/: dune  tests.ml
_build/default/tests/.merlin-conf/: exe-tests
_build/default/tests/.tests.eobjs/byte/: dune__exe__Tests.cmti
_build/default/tests/.tests.eobjs/native/: dune__exe__Tests.cmx
demo/: array.c  array.ml  functions.c  functions.ml  maxArray.c  maxArray.ml  structs.c  structs.ml
src/: .gitignore  collect_vars.ml  collect_vars.mli  dune  find_rec.ml  find_rec.mli  lib.ml  lib.mli  scope.ml  scope.mli  tocaml.ml  tocaml.mli  utils.ml  utils.mli  viewast.ml  viewast.mli
tests/: dune  error.ml  loops.ml  struct.ml  test.c  test1.c  testOutSmall.txt  testout1  testout2  tests.ml
tests/actual/: andor.ml  array.cmi  array.cmx  array.ml  arrayfunc.ml  char.cmi  char.cmx  char.ml  comments.cmi  comments.cmx  comments.ml  dune  elseif.cmi  elseif.cmx  elseif.ml  error.cmi  error.cmx  error.ml  float.cmi  float.cmx  float.ml  foo.ml  foo2.cmi  foo2.cmx  foo2.ml  functions.cmi  functions.cmx  functions.ml  if.cmi  if.cmx  if.ml  if2.cmi  if2.cmx  if2.ml  ifarrays.cmi  ifarrays.cmx  ifarrays.ml  ifreturn.cmi  ifreturn.cmx  ifreturn.ml  (+40 more)
tests/ast/: 3.txt  testOut.txt  testOutSmall.txt  testTree.txt  testTree2.txt
tests/broken/: arrayfunc.c  foo.c  scope.c  structs.c
tests/expected/: arrayfunc.txt  float.txt  incdec.txt  looparrays.txt  print.txt  recrec.txt  recursive.txt  structs.txt
tests/source/: andor.c  array.c  arrayfunc.c  char.c  comments.c  elseif.c  error.c  float.c  foo.c  foo2.c  functions.c  if.c  if2.c  ifarrays.c  ifreturn.c  incdec.c  looparrays.c  loops.c  nestedloops.c  notes.c  print.c  recrec.c  recursive.c  statements.c  struct.c  structs.c  test.c  testfoo.c  types.c  voidfunc.c
tests/transpiled/: array.ml  comments.ml  dune  error.ml  foo.ml  foo2.ml  functions.ml  if.ml  ifarrays.ml  int.ml  looparrays.ml  loops.ml  main.ml  statements.ml  struct.ml  structs.ml
