(library
 (name utils)
 (modules utils)
 (libraries core clangml))

(library
 (name collect_vars)
 (modules collect_vars)
 (libraries core clangml))

(library
 (name lib)
 (modules lib)
 (libraries core clangml collect_vars utils))

(executable
 (name tocaml)
 (modules tocaml)
 (libraries
  lib
  core
  core_unix.sys_unix
  core_unix.command_unix
  ocamlformat-lib
  fswatch)
 (preprocess
  (pps ppx_let)))
