(library
 (name scope)
 (modules scope)
 (libraries core)
 (preprocess
  (pps bisect_ppx)))

(library
 (name find_rec)
 (modules find_rec)
 (libraries core clangml)
 (preprocess
  (pps bisect_ppx)))

(library
 (name collect_vars)
 (modules collect_vars)
 (libraries core clangml)
 (preprocess
  (pps bisect_ppx)))

(library
 (name utils)
 (modules utils)
 (libraries core clangml scope collect_vars)
 (preprocess
  (pps bisect_ppx)))

(library
 (name lib)
 (modules lib)
 (libraries
  core
  clangml
  collect_vars
  find_rec
  utils
  scope
  str
  ocamlformat-lib
  core_unix.sys_unix)
 (preprocess
  (pps bisect_ppx)))

(executable
 (name tocaml)
 (modules tocaml)
 (libraries lib core core_unix.command_unix fswatch)
 (preprocess
  (pps ppx_let)))
