(executable (name arrayfunc) (modules arrayfunc) (libraries core))
(executable (name foo) (modules foo) (libraries core))
(executable (name scope) (modules scope) (libraries core))
(executable (name int) (modules int) (libraries core))
(executable (name char) (modules char) (libraries core))
(executable (name comments) (modules comments) (libraries core))
(executable (name recursive) (modules recursive) (libraries core))
(executable (name main) (modules main) (libraries core))
(executable (name comments) (modules comments) (libraries core))
(executable (name int) (modules int) (libraries core))
(executable (name test) (modules test) (libraries core))
(executable (name loops) (modules loops) (libraries core))
(executable (name statements) (modules statements) (libraries core))
(executable (name float) (modules float) (libraries core))
(executable (name ifarrays) (modules ifarrays) (libraries core))
(executable (name arrayfunc) (modules arrayfunc) (libraries core))
(executable (name array) (modules array) (libraries core))
(executable (name print) (modules print) (libraries core))
(executable (name looparrays) (modules looparrays) (libraries core))
(executable (name struct) (modules struct) (libraries core))
(executable (name foo) (modules foo) (libraries core))
(executable (name recursive) (modules recursive) (libraries core))
(executable (name structs) (modules structs) (libraries core))
(executable (name functions) (modules functions) (libraries core))
(executable (name ifreturn) (modules ifreturn) (libraries core))
(executable (name loops) (modules loops) (libraries core))
(executable (name error) (modules error) (libraries core))
(executable (name nestedloops) (modules nestedloops) (libraries core))
(executable (name float) (modules float) (libraries core))
(executable (name voidfunc) (modules voidfunc) (libraries core))
