; (library
;  (name error)
;   (modules error)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

; (library
;  (name foo)
;   (modules foo)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

; (library
;  (name foo2)
;   (modules foo2)

;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

;   (library
;  (name functions)
;   (modules functions)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

;  (library
;  (name if)
;   (modules if)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

;  ;  (library
;  ; (name if2)
;  ;  (modules if2)
;  ; (libraries core)
;  ; (preprocess
;  ;  (pps bisect_ppx)))

;   (library
;  (name int)
;   (modules int)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

  (library
 (name loops)
  (modules loops)
 (libraries core)
 (preprocess
  (pps bisect_ppx)))

;   (library
;  (name main)
;   (modules main)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

 ;  (library
 ; (name statements)
 ;  (modules statements)
 ; (libraries core)
 ; (preprocess
 ;  (pps bisect_ppx)))

;   (library
;  (name struct)
;   (modules struct)

;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))

;   (library
;  (name structs)
;   (modules structs)
;  (libraries core)
;  (preprocess
;   (pps bisect_ppx)))